Attempt to fix Imprimir cut off

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3268,7 +3268,7 @@ fieldset[disabled] .btn-gplus.active {
   body,
   .hbox,
   .vbox {
-    /*height: auto;*/
+    height: auto;
     font-size:90%;
   }
   .m-t{margin-top:0; margin-bottom:0;}
